add home page; update site for uniformity

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -21,13 +21,13 @@
         </div>
     </header>
     <main>
-        <h1>Contact Us</h1>
+        <h1 class="contact-header">Contact Us</h1>
         <div class="contact_info_grid">
             <div class="google-map"> 
                 <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d6150.2963178632235!2d-106.08996436013676!3d39.578811130106246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sriver%20rafting%20colorado!5e0!3m2!1sen!2sus!4v1711975231296!5m2!1sen!2sus" width="450" height="300" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div>
-                <h3 class="contact-info-header">Roaring Rapids Whitewater Rafting</h3>
+                <h2 class="contact-info-header">Roaring Rapids Whitewater Rafting</h2>
                 <p class="contact-info">267 Marina Rd, Frisco, CO 80424</p>
                 <p class="contact-info">(970) 555-1212</p>
                 <p class = "contact-info">info@roaringrapids.com</p>
@@ -35,14 +35,13 @@
         </div>
         <div class="contact_form_grid">
             <form>
-
                 <fieldset>
-                    <legend><h3 class="form-title" >Request More Information</h3></legend>
-                    <label for="q1">Name:</label><br>
-                    <input type="text" id="q1" name="q1"><br>
+                    <legend><h2 class="form-title" >Request More Information</h2></legend>
+                    <label for="name">Name:</label><br>
+                    <input type="text" id="name" name="name"><br>
                     <br>
-                    <label for="useremail">Email address:</label><br>
-                    <input type="email" id="useremail" name="useremail"><br>
+                    <label for="email">Email address:</label><br>
+                    <input type="email" id="email" name="email"><br>
                     <br>
                     <label>Request Type:</label><br>
                     <input type="radio" id="general" name="general" value="General Inquiry">
