--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,15 +10,63 @@
 </head>
 <body>
     <header>
+        <div class="grid">
         <img src="images/logo.png" alt="Rafting Site Logo">
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
-          </nav>
+        </nav>
+        </div>
     </header>
     <main>
+        <div class="home">
+            <img src="images/Home-image1.jpg" alt="White Water Rafting" width="200">
+            <h1>Roaring Rapids Whitewater Rafting</h1>
+            <article class="action">    
+                <h2>Escape the monotony.  Live the adventure!</h2>
+                <h3> <a href="trips.html">Schedule one of our trips today!</a></h3>
+            </article>  
+        </div>
+        <div class="home-grid">
+            <div class="home-grid-one">
+                <figure>
+                    <img src="images/image6.jpg" alt="Kayaking on the lake" width="200">
+                    <figcaption><h4>Plan your excursion</h4></figcaption>
+                </figure>
+            </div>
+            <div class="home-grid-two">
+                <figure>
+                    <img src="images/bighorn-ram.jpg" alt="White Water Rafting" width="200">
+                    <figcaption><h4>Experience the wildlife</h4></figcaption>
+                </figure>
+            </div>
+            <div class="home-grid-form">
+                <form>
+                    <fieldset>
+                        <legend><h2 class="form-title" >Subscribe to our newsletter!</h2></legend>
+                        <label for="username">Name:</label><br>
+                        <input type="text" id="username" name="username"><br>
+                        <br>
+                        <label for="useremail">Email address:</label><br>
+                        <input type="email" id="useremail" name="useremail"><br>
+                        <br>
+                        <button class="request" type="submit">Sign up!</button>
+                    </fieldset>
+                </form>
+            </div>
+            <div class="home-grid-four">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, rem error quod aliquam, quasi reiciendis similique eos rerum quibusdam illo fugiat, doloribus molestiae quidem repellat necessitatibus sed deserunt a magni.
+                </p>
+            </div>
+            <div class="home-grid-five">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea suscipit, perferendis magnam at qui consequuntur aspernatur hic! Officiis beatae voluptatem esse architecto aspernatur sint suscipit est nulla. Reprehenderit, distinctio atque.               
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
         <p>
