--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
                 </p>
             </article>         
         </div>
-        <h2>History</h2>
+        <h2 class="green-background">History</h2>
         <section class="flexbox-container-history">
             <div class="history-box-one">
                 <p>
@@ -48,7 +48,7 @@
                 </p>
             </div>
         </section>
-        <h2>Adventure Awaits You!</h2>
+        <h2 class="green-background">Adventure Awaits You!</h2>
         <section>
             <div class="flexbox-container-adventure">
                 <div class="adventure-one">
