update home & trips

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Plan About | Cris Altman</title>
-    <meta name="description" content="About page for Rafting Site Plan">
+    <title>Rafting Site About Page | Cris Altman</title>
+    <meta name="description" content="About page for Rafting Site">
     <meta name="author" content="Cris Altman">
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
-    
     <header>
         <div class="grid">
         <img src="images/logo.png" alt="Rafting Site Logo">
