--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Contact Form | Cris Altman</title>
-    <meta name="description" content="Contact form for Rafting Site Plan">
+    <title>Rafting Site Contact Page | Cris Altman</title>
+    <meta name="description" content="Contact page for Rafting Site">
     <meta name="author" content="Cris Altman">
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
