--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Plan About | Cris Altman</title>
-    <meta name="description" content="About page for Rafting Site Plan">
+    <title>Rafting Site Home page | Cris Altman</title>
+    <meta name="description" content="Home page for Rafting Site">
     <meta name="author" content="Cris Altman">
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
