--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafting Site Plan About | Cris Altman</title>
-    <meta name="description" content="About page for Rafting Site Plan">
+    <title>Rafting Site Trips Page | Cris Altman</title>
+    <meta name="description" content="Trips page for Rafting Site">
     <meta name="author" content="Cris Altman">
     <link rel="stylesheet" href="styles/rafting.css"> 
 </head>
 <body>
-    
     <header>
         <div class="grid">
         <img src="images/logo.png" alt="Rafting Site Logo">
@@ -22,7 +21,98 @@
         </div>
     </header>
     <main>
- 
+        <div class="home">
+            <img src="images/river-wide.jpg" alt="Still lake with wooded background" width="200">
+            <h1>Roaring Rapids Whitewater Rafting</h1> 
+        </div>
+        <h2 class="green-background">Adventures</h2>
+        <div class="trips-grid">
+            <div class="trip-one">
+                <figure>
+                    <img src="images/image1.jpg" alt="Angosta Canyon Rapids" width="180">
+                    <figcaption>Angosta Rapids</figcaption>
+                </figure>
+            </div>
+            <div class="trip-two">
+                <p>
+                    Experience a three to four hour trip through Rocky Ledge Canyon accompanied by one of our experienced guides.  This is a great trip for individuals of all skill levels.  Special packages available for team building or family excursions.
+                </p>
+            </div>
+            <div class="trip-three">
+                <figure>
+                    <img src="images/image2.jpg" alt="Roaring Rapids" width="180">
+                    <figcaption>Roaring Rapids</figcaption>
+                </figure>
+            </div>
+            <div class="trip-four">
+                <p>
+                    The Roaring Rapids adventure provides a high intensity experience over a clustered grouping of rapids.  This is a guided trip designed for intermediate rafters.  This trip provides a high intensity experience
+                </p>
+            </div>
+            <div class="trip-five">
+                <figure>
+                    <img src="images/image3.jpg" alt="Yellow Rapids" width="180">
+                    <figcaption>Yellow Rapids</figcaption>
+                </figure>
+            </div>
+            <div class="trip-six">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, eligendi quas labore modi fugit architecto voluptas quos nam voluptatem cupiditate, natus, aliquam quaerat possimus aspernatur ea doloremque ipsa quam dignissimos?
+                </p>
+            </div>
+        </div>
+        <div>
+            <article class="action-contact">    
+                <h2>Live the adventure!</h2>
+                <h3 class="home"> <a href="contact.html">Contact us today for information.</a></h3>
+            </article> 
+            <div class="trip-table">
+                <table>
+                    <tr>
+                      <th>Trip name</th>
+                      <th>Experience Level</th>
+                      <th>Duration</th>
+                      <th>Description</th>
+                    </tr>
+                    <tr class="border-blue">
+                        <td id="blue">Canyon Lake</td>
+                        <td>All</td>
+                        <td>2 hrs</td>
+                        <td>Self-guided kayaking on Canyon Lake</td>
+                      </tr>
+                    <tr>
+                        <td id="blue">Rocky Ledge Canyon</td>
+                        <td>All</td>
+                        <td>3-4 hrs</td>
+                        <td>Guided trip through the canyon.  A great trip for all skill levels.  Especially recommended for team building or family excursions.</td>
+                      </tr>
+                    <tr>
+                      <td id="blue">Angosta Rapids</td>
+                      <td>All</td>
+                      <td>3-4 hrs</td>
+                      <td>Good for all levels with some areas providing a higher intensity challenge.</td>
+                    </tr>
+                    <tr>
+                        <td id="blue">Rolling Straits</td>
+                        <td>All</td>
+                        <td>6-8 hrs</td>
+                        <td>Day long trip, good for all experience levels.  Provides a variety of experiences.  Broken up with a nice lunch in a beautiful spot past the rapids.</td>
+                      </tr>
+                    <tr>
+                      <td id="blue">Roaring Rapids</td>
+                      <td>Intermediate</td>
+                      <td>3-4 hrs</td>
+                      <td>Shorter intermediate trip.  Provides a high intensity experience over a good grouping of rapids.</td>
+                    </tr>
+                    <tr>
+                        <td id="blue">Yellow Rapids</td>
+                        <td>Experienced</td>
+                        <td>4-6 hrs</td>
+                        <td>Grueling course of rapids best for groups of experienced rafters.  A beautiful lunch spot is sandwiched between two the two most intense sections of rapids on the river.</td>
+                      </tr>
+                  </table>
+            </div>
+        </div>
     </main>
     <footer>
         <p>
