update about h2, blue table to class

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -26,29 +26,32 @@
             <h1>Roaring Rapids Whitewater Rafting</h1>
             <article>    
                 <img id="happy" src="images/happy-client.png" alt="Happy client" width="50">
+                <h2>Company Mission</h2>
                 <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, veniam sequi adipisci consectetur facilis nam omnis obcaecati saepe laboriosam reiciendis vitae consequuntur quam ex qui dolorem est velit? Eos, voluptatibus.
                 </p>
             </article>         
         </div>
-        <h2 class="green-background">History</h2>
-        <section class="flexbox-container-history">
-            <div class="history-box-one">
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
-                </p>
-            </div>
-            <div class="history-box-two">
-                <img src="images/history-image.jpg" alt="Looking down the river" width="200">
-            </div>
-            <div class="history-box-three">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam repudiandae doloribus reiciendis esse omnis pariatur consequuntur ab ducimus exercitationem rerum amet assumenda at eveniet nisi, magni iure cum. Reiciendis, velit.
-                </p>
+        <section>
+            <h2 class="green-background">History</h2>
+            <div class="flexbox-container-history">
+                <div class="history-box-one">
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, fugiat alias. Laudantium tempora rem, perspiciatis optio mollitia consequatur tempore facilis rerum! Libero numquam dolor obcaecati unde veritatis aliquid adipisci iure!
+                    </p>
+                </div>
+                <div class="history-box-two">
+                    <img src="images/history-image.jpg" alt="Looking down the river" width="200">
+                </div>
+                <div class="history-box-three">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam repudiandae doloribus reiciendis esse omnis pariatur consequuntur ab ducimus exercitationem rerum amet assumenda at eveniet nisi, magni iure cum. Reiciendis, velit.
+                    </p>
+                </div>
             </div>
         </section>
-        <h2 class="green-background">Adventure Awaits You!</h2>
         <section>
+            <h2 class="green-background">Adventure Awaits You!</h2>
             <div class="flexbox-container-adventure">
                 <div class="adventure-one">
                     <figure>
