--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -74,37 +74,37 @@
                       <th>Description</th>
                     </tr>
                     <tr class="border-blue">
-                        <td id="blue">Canyon Lake</td>
+                        <td class="blue">Canyon Lake</td>
                         <td>All</td>
                         <td>2 hrs</td>
                         <td>Self-guided kayaking on Canyon Lake</td>
                       </tr>
                     <tr>
-                        <td id="blue">Rocky Ledge Canyon</td>
+                        <td class="blue">Rocky Ledge Canyon</td>
                         <td>All</td>
                         <td>3-4 hrs</td>
                         <td>Guided trip through the canyon.  A great trip for all skill levels.  Especially recommended for team building or family excursions.</td>
                       </tr>
                     <tr>
-                      <td id="blue">Angosta Rapids</td>
+                      <td class="blue">Angosta Rapids</td>
                       <td>All</td>
                       <td>3-4 hrs</td>
                       <td>Good for all levels with some areas providing a higher intensity challenge.</td>
                     </tr>
                     <tr>
-                        <td id="blue">Rolling Straits</td>
+                        <td class="blue">Rolling Straits</td>
                         <td>All</td>
                         <td>6-8 hrs</td>
                         <td>Day long trip, good for all experience levels.  Provides a variety of experiences.</td>
                       </tr>
                     <tr>
-                      <td id="blue">Roaring Rapids</td>
+                      <td class="blue">Roaring Rapids</td>
                       <td>Intermediate</td>
                       <td>3-4 hrs</td>
                       <td>Shorter intermediate trip.  Provides a high intensity experience over a good grouping of rapids.</td>
                     </tr>
                     <tr>
-                        <td id="blue">Yellow Rapids</td>
+                        <td class="blue">Yellow Rapids</td>
                         <td>Experienced</td>
                         <td>4-6 hrs</td>
                         <td>Grueling course of rapids best for groups of experienced rafters.</td>
